[metadata]
name = story-db
version = attr: storydb.version.__version__
author = Brett Alistair Kromkamp
author_email = brettkromkamp@gmail.com
description = StoryDB is a formalization of complex narrative events with an accompanying persistence store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brettkromkamp/story-db
project_urls =
    Bug Tracker = https://github.com/brettkromkamp/story-db/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-slugify>=6.1.2
    pytest>=7.1.2
    topicdb>=2.0.3